--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 
           <h1 id="project_title"><a href="/index.html">{{ site.title | default: site.github.repository_name }}</a></h1>
           <h2 id="project_tagline">{{ page.title | default: site.github.project_tagline }}</h2>
+          <h3>Theme Change Test Version</h3>
 
         </header>
     </div>
